...
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

"add_card" = "Add card";
"apple_pay" = "Apple Pay";
"button_done" = "DONE";
"button_edit" = "Edit";
"button_scan_card" = "Scan card";
"button_add_address_line_card" = "+ Add address line %@ (optional)";
"cancel" = "Cancel";
"back" = "Back";
"card_holder_email_hint" = "Email";
"card_holder_hint" = "Cardholder Name";
"card_holder_country_hint" = "Country";
"card_holder_state_hint" = "State";
"card_holder_province_hint" = "Province or territory";
"card_holder_phone_hint" = "Mobile number";
"card_holder_city_hint" = "City";
"card_holder_adress_line_hint" = "Address line %@";
"card_number_hint" = "Card Number";
"card_subtitle" = "%@ Ending";
"cards" = "Cards";
"check_card" = "Check Card";
"check_expiry_date" = "Check expiry date";
"choose_payment_method" = "Choose a Payment Method";
"connected_cards" = "Connected cards";
"country_canada" = "Canada";
"country_other" = "Other";
"country_uk" = "UK";
"country_usa" = "USA";
"customize_card" = "Customize Card";
"default_amex_card_title" = "My American Express Card";
...
"default_dinersclub_card_title" = "My Diners Club Card";
"default_discover_card_title" = "My Discover Card";
"default_jcb_card_title" = "My JCB Card";
"default_maestro_card_title" = "My Maestro Card";
"default_mastercard_card_title" = "My MasterCard Card";
"default_visa_card_title" = "My VISA Card";
"delete" = "Delete";
"delete_card_alert_message" = "Are you sure you want to delete this card from your wallet?";
"delete_card_alert_title" = "Delete Card?";
"dismiss" = "Dismiss";
"error" = "Error";
"enter_card_title" = "Enter a card title...";
"error_card_title_too_long" = "Card Name cannot be longer than 28 characters";
"error_invalid_card_number_desc" = "Invalid card number";
"error_unsupported_card_desc" = "%@ is not supported";
"expire_soon" = "expire soon";
"expired" = "Expired";
"expiry_date" = "MM/YY";
"ideal_payment" = "iDeal";
"ideal_transaction" = "iDEAL Transaction";
"invalid_expiry_date_value" = "Invalid date value entered";
"invalid_email_value" = "Invalid email entered";
"invalid_phone_code_value" = "Invalid phone code entered";
"invalid_phone_value" = "Invalid phone entered";
...
"invalid_province_territory_should_not_be_empty" = "Please select a province or territory";
"invalid_address" = "Please enter a valid address";
"invalid_mobile_number" = "Please enter a valid mobile number";
"invalid_city" = "Please enter a valid city";
"is_expired" = "is Expired";
"no_cards_added" = "You didn’t add any cards yet.\nAdd one right now or use any of the payment methods below";
"no_connected_cards" = "You didn't connect any cards yet";
"ok" = "Ok";
"pay_amount" = "Pay %@";
"pay_by_bank" = "Pay by Bank app";
"pay_now" = "Pay Now";
"continue" = "Continue";
"post_code_hint" = "Postcode";
...
"transaction_delayed" = "This is taking longer than expected...";
"transaction_successful" = "Transaction success!";
"transaction_timeout" = "Transaction timed out!";
"transaction_unsuccessful" = "Card transaction unsuccessful - please try again";
"unknown_card_network" = "Unknown card network";
"will_expire_soon" = "it will expire soon";
"you_will_pay" = "You will pay";

"error_invalid_ideal_currency_desc" = "iDEAL transactions only support EUR as the currency.";
"error_invalid_ideal_currency_reason" = "Invalid currency passed to iDEAL transaction configuration.";
"error_invalid_pbba_currency_desc" = "PBBA transactions only support GBP as the currency.";
"error_invalid_pbba_currency_reason" = "Invalid currency passed to PBBA transaction configuration.";
"error_invalid_pbba_url_scheme_desc" = "PBBA transactions require the deeplink scheme to be set.";
...
