...
        [Option optionWithType:OptionTypeCreateCardToken title:@"Register card" details: @"to be stored for future transactions"],
        [Option optionWithType:OptionTypeSaveCard title:@"Save card" details: @"to be stored for future transactions"],
        [Option optionWithType:OptionTypeRepeatPayment title:@"Token payment" details: @"with a stored card token"],
        [Option optionWithType:OptionTypeTokenPreAuth title:@"Token preAuth" details: @"with a stored card token"],
        [Option optionWithType:OptionTypeApplePayPayment title:@"Apple Pay payment" details: @"with a wallet card"],
        [Option optionWithType:OptionTypeApplePayPreAuth title:@"Apple Pay preAuth" details: @"with a wallet card"],
        [Option optionWithType:OptionTypePaymentMethods title: @"Payment Method" details: @"with default payment methods"],
        [Option optionWithType:OptionTypeStandaloneApplePayButton title: @"Apple Pay Button" details: @"Standalone ApplePay Button"]
    ];
}
@end

