...
            return @"CVN2";
        case CardNetworkDiscover:
            return @"CID";
        case CardNetworkJCB:
            return @"CAV2";
        default:
            return @"CVV";
    }
}

- (NSString *)hintLabelText {
    if (self.isTokenPayment) {
        return @"please_reenter_the_card_security_code".localized;
...
